fix: 修復h2調整 z-index 造成無法選中的問題

--- a/docs/.vitepress/theme/styles/style.css
+++ b/docs/.vitepress/theme/styles/style.css
@@ -23,10 +23,6 @@
     background-color: var(--vp-code-block-bg);
   }
 
-  .vp-doc h2{
-    z-index: -1;
-  }
-
   .main .vp-doc table {
     /* display: table; */
     width: 100%;
